<?xml version="1.0"?>
<package format="2">
  <name>wiggle_action_server</name>
  <version>0.0.0</version>
  <description>
    An action server that creates a wiggle motion for boxys hand using giskard.
  </description>

  <maintainer email="stelter@tzi.de">Simon Stelter</maintainer>

  <license>todo</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>giskard_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
</package>
